[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cryptpickle"
authors = [{name = "Privacy-Dad", email = "privacy-dad@protonmail.com"}]
dynamic = ["version", "description"]
license = {file = "LICENSE.txt"}
dependencies = [
    "pyzipper"
]

[project.urls]
Home = "https://github.com/privtools/CryptPickle"
