[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cryptpickle"
authors = [{name = "Privtools", email = "privacy-dad@protonmail.com"}]
dynamic = ["version"]
license = {file = "LICENSE.txt"}
description = "Encrypted python object serialization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography"
]

classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Security"
]

[project.urls]
Home = "https://github.com/privtools/CryptPickle"
